# psion-org2-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: asm-prog.md  cli-tools.md  db.md  small-c-prog.md  stdio.md  stdlib.md  testkit.md
examples/: README_EMULATOR.md  beep.asm  bittest.asm  catch.c  catch4.c  counter.asm  db_contacts.c  emulator_demo.py  emulator_mcp_client.py  emulator_play_games.py  ext_param_test.c  external_return_test.c  fp_calc.asm  fp_debug.c  fp_demo.c  hello.asm  hello.c  hello_emulator.c  opl_return_test.c  optimizer_test.asm  runtime_test.c  runtime_test_4line.c  simple_lz.c  stdlib_asm_test.asm  stdlib_test.c  struct_demo.c  test_c.c
include/: ctype.h  ctype.inc  db.h  dbruntime.inc  float.h  float.inc  fpruntime.inc  psion.h  psion.inc  runtime.inc  stdio.h  stdio.inc  syscalls.inc  sysvars.inc
src/psion_sdk/: __init__.py  errors.py
src/psion_sdk/assembler/: __init__.py  assembler.py  codegen.py  expressions.py  lexer.py  opcodes.py  optimizer.py  parser.py
src/psion_sdk/cli/: __init__.py  errors.py  psasm.py  psbuild.py  pscc.py  psdisasm.py  pslink.py  psopk.py
src/psion_sdk/comms/: __init__.py  boot.py  crc.py  link.py  serial.py  transfer.py
src/psion_sdk/cpu/: __init__.py  hd6303.py
src/psion_sdk/disassembler/: __init__.py  hd6303.py  qcode.py
src/psion_sdk/emulator/: __init__.py  breakpoints.py  bus.py  cpu.py  display.py  emulator.py  keyboard.py  memory.py  models.py  pack.py
src/psion_sdk/emulator/mcp/: __init__.py  server.py  tools.py
src/psion_sdk/emulator/mcp/tools/: __init__.py  core.py  debugging.py  decorators.py  display.py  execution.py  load.py  memory.py  parsing.py  session.py
src/psion_sdk/opk/: __init__.py  builder.py  checksum.py  parser.py  records.py
src/psion_sdk/sdk/: __init__.py  models.py  syscalls.py  sysvars.py
src/psion_sdk/smallc/: __init__.py  ast.py  codegen.py  compiler.py  cross_file_checker.py  errors.py  lexer.py  parser.py  preprocessor.py  types.py
src/psion_sdk/testkit/: __init__.py  config.py  context.py  decorators.py  diagnostics.py  exceptions.py  fixtures.py  sequences.py
tests/: __init__.py  test_asm_inline.py  test_assembler.py  test_codegen.py  test_comms.py  test_cross_file_checker.py  test_db.py  test_debug_symbols.py  test_disassembler.py  test_emulator_breakpoints.py  test_emulator_cpu.py  test_emulator_display.py  test_emulator_integration.py  test_emulator_keyboard.py  test_emulator_mcp.py  test_emulator_memory.py  test_expressions.py  test_function_return_types.py  test_lexer.py  test_multifile_integration.py  test_opk.py  test_optimizer.py  test_psbuild.py  test_sdk.py  test_smallc.py  test_stdio.py  test_stdlib.py
tests/testkit/: __init__.py  conftest.py
tests/testkit/integration/: conftest.py  test_boot.py  test_calculator.py  test_menu_navigation.py  test_stdlib.py
